--- a/gyakorlat02_feladatok .ipynb
+++ b/gyakorlat02_feladatok .ipynb
@@ -35,14 +35,72 @@
         {
             "cell_type": "code",
             "source": [
-                "SELECT*"
+                "--dvd_magyar\r\n",
+                "SELECT ki_datum,\r\n",
+                "    count(*) as 'Darab'\r\n",
+                "From kolcsonzesek\r\n",
+                "GROUP BY ki_datum"
             ],
             "metadata": {
                 "azdata_cell_guid": "bd3cef1a-4e6e-4ece-9dc3-aaa9d2b5d66d",
                 "language": "sql"
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+{
+    "output_type": "display_data",
+    "data": {
+        "text/html": "(3 rows affected)"
+    },
+    "metadata": {}
+}, {
+    "output_type": "display_data",
+    "data": {
+        "text/html": "Total execution time: 00:00:00.038"
+    },
+    "metadata": {}
+}, {
+    "output_type": "execute_result",
+    "metadata": {},
+    "execution_count": 1,
+    "data": {
+        "application/vnd.dataresource+json": {
+            "schema": {
+                "fields": [
+                    {
+                        "name": "ki_datum"
+                    },
+                    {
+                        "name": "Darab"
+                    }
+                ]
+            },
+            "data": [
+                {
+                    "ki_datum": "2003-12-11",
+                    "Darab": "3"
+                },
+                {
+                    "ki_datum": "2006-10-01",
+                    "Darab": "1"
+                },
+                {
+                    "ki_datum": "2006-10-02",
+                    "Darab": "1"
+                }
+            ]
+        },
+        "text/html": [
+            "<table>",
+            "<tr><th>ki_datum</th><th>Darab</th></tr>",
+            "<tr><td>2003-12-11</td><td>3</td></tr>",
+            "<tr><td>2006-10-01</td><td>1</td></tr>",
+            "<tr><td>2006-10-02</td><td>1</td></tr>",
+            "</table>"
+        ]
+    }
+}
+],
+            "execution_count": 1
         },
         {
             "cell_type": "markdown",
