--- a/gyakorlat02_feladatok .ipynb
+++ b/gyakorlat02_feladatok .ipynb
@@ -39,68 +39,71 @@
                 "SELECT ki_datum,\r\n",
                 "    count(*) as 'Darab'\r\n",
                 "From kolcsonzesek\r\n",
-                "GROUP BY ki_datum"
+                "GROUP BY ki_datum\r\n",
+                "order BY ki_datum DESC"
             ],
             "metadata": {
                 "azdata_cell_guid": "bd3cef1a-4e6e-4ece-9dc3-aaa9d2b5d66d",
                 "language": "sql"
             },
             "outputs": [
-{
-    "output_type": "display_data",
-    "data": {
-        "text/html": "(3 rows affected)"
-    },
-    "metadata": {}
-}, {
-    "output_type": "display_data",
-    "data": {
-        "text/html": "Total execution time: 00:00:00.038"
-    },
-    "metadata": {}
-}, {
-    "output_type": "execute_result",
-    "metadata": {},
-    "execution_count": 1,
-    "data": {
-        "application/vnd.dataresource+json": {
-            "schema": {
-                "fields": [
-                    {
-                        "name": "ki_datum"
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(3 rows affected)"
                     },
-                    {
-                        "name": "Darab"
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.005"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 2,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "ki_datum"
+                                    },
+                                    {
+                                        "name": "Darab"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "ki_datum": "2006-10-02",
+                                    "Darab": "1"
+                                },
+                                {
+                                    "ki_datum": "2006-10-01",
+                                    "Darab": "1"
+                                },
+                                {
+                                    "ki_datum": "2003-12-11",
+                                    "Darab": "3"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>ki_datum</th><th>Darab</th></tr>",
+                            "<tr><td>2006-10-02</td><td>1</td></tr>",
+                            "<tr><td>2006-10-01</td><td>1</td></tr>",
+                            "<tr><td>2003-12-11</td><td>3</td></tr>",
+                            "</table>"
+                        ]
                     }
-                ]
-            },
-            "data": [
-                {
-                    "ki_datum": "2003-12-11",
-                    "Darab": "3"
-                },
-                {
-                    "ki_datum": "2006-10-01",
-                    "Darab": "1"
-                },
-                {
-                    "ki_datum": "2006-10-02",
-                    "Darab": "1"
                 }
-            ]
-        },
-        "text/html": [
-            "<table>",
-            "<tr><th>ki_datum</th><th>Darab</th></tr>",
-            "<tr><td>2003-12-11</td><td>3</td></tr>",
-            "<tr><td>2006-10-01</td><td>1</td></tr>",
-            "<tr><td>2006-10-02</td><td>1</td></tr>",
-            "</table>"
-        ]
-    }
-}
-],
-            "execution_count": 1
+            ],
+            "execution_count": 2
         },
         {
             "cell_type": "markdown",
@@ -119,14 +122,210 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "SELECT stilus as 'Stílus', avg(nettoar) as 'Átlag ár' \r\n",
+                "FROM dvd\r\n",
+                "\r\n",
+                "GROUP BY stilus\r\n",
+                "HAVING avg(nettoar)>4500\r\n",
+                "ORDER BY AVG(nettoar) DESC"
             ],
             "metadata": {
                 "azdata_cell_guid": "e9de5726-f036-4fb9-8c33-a873955ed886",
                 "language": "sql"
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(30 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.014"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 10,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "Stílus"
+                                    },
+                                    {
+                                        "name": "Átlag ár"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "Stílus": "ásványtan",
+                                    "Átlag ár": "5624"
+                                },
+                                {
+                                    "Stílus": "játék (rodeó)",
+                                    "Átlag ár": "5591"
+                                },
+                                {
+                                    "Stílus": "humor",
+                                    "Átlag ár": "5573"
+                                },
+                                {
+                                    "Stílus": "környezetvédelem",
+                                    "Átlag ár": "5508"
+                                },
+                                {
+                                    "Stílus": "kresz",
+                                    "Átlag ár": "5476"
+                                },
+                                {
+                                    "Stílus": "játék (jégkorong)",
+                                    "Átlag ár": "5242"
+                                },
+                                {
+                                    "Stílus": "színház",
+                                    "Átlag ár": "5158"
+                                },
+                                {
+                                    "Stílus": "múvészet",
+                                    "Átlag ár": "5118"
+                                },
+                                {
+                                    "Stílus": "kémia",
+                                    "Átlag ár": "5094"
+                                },
+                                {
+                                    "Stílus": "fordító program",
+                                    "Átlag ár": "5036"
+                                },
+                                {
+                                    "Stílus": "kerttervező",
+                                    "Átlag ár": "4951"
+                                },
+                                {
+                                    "Stílus": "művészet",
+                                    "Átlag ár": "4939,25"
+                                },
+                                {
+                                    "Stílus": "festészet",
+                                    "Átlag ár": "4901"
+                                },
+                                {
+                                    "Stílus": "zene",
+                                    "Átlag ár": "4855,333333333333"
+                                },
+                                {
+                                    "Stílus": "játék",
+                                    "Átlag ár": "4850,466666666666"
+                                },
+                                {
+                                    "Stílus": "játék (labdarúgás)",
+                                    "Átlag ár": "4817,333333333333"
+                                },
+                                {
+                                    "Stílus": "állattan",
+                                    "Átlag ár": "4783,666666666667"
+                                },
+                                {
+                                    "Stílus": "nyelvtan",
+                                    "Átlag ár": "4770,666666666667"
+                                },
+                                {
+                                    "Stílus": "fizika",
+                                    "Átlag ár": "4769"
+                                },
+                                {
+                                    "Stílus": "nyelvtanító",
+                                    "Átlag ár": "4759,476190476191"
+                                },
+                                {
+                                    "Stílus": "csillagászat",
+                                    "Átlag ár": "4733,571428571428"
+                                },
+                                {
+                                    "Stílus": "ismeretterjesztő",
+                                    "Átlag ár": "4726,673913043478"
+                                },
+                                {
+                                    "Stílus": "irodalom, nyelv",
+                                    "Átlag ár": "4704"
+                                },
+                                {
+                                    "Stílus": "gasztronómia",
+                                    "Átlag ár": "4691"
+                                },
+                                {
+                                    "Stílus": "történelem",
+                                    "Átlag ár": "4655,731707317073"
+                                },
+                                {
+                                    "Stílus": "szótár",
+                                    "Átlag ár": "4624,428571428572"
+                                },
+                                {
+                                    "Stílus": "sport",
+                                    "Átlag ár": "4607"
+                                },
+                                {
+                                    "Stílus": "földrajz",
+                                    "Átlag ár": "4580,0625"
+                                },
+                                {
+                                    "Stílus": "matematika",
+                                    "Átlag ár": "4520,777777777777"
+                                },
+                                {
+                                    "Stílus": "felvételi",
+                                    "Átlag ár": "4501,333333333333"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>Stílus</th><th>Átlag ár</th></tr>",
+                            "<tr><td>ásványtan</td><td>5624</td></tr>",
+                            "<tr><td>játék (rodeó)</td><td>5591</td></tr>",
+                            "<tr><td>humor</td><td>5573</td></tr>",
+                            "<tr><td>környezetvédelem</td><td>5508</td></tr>",
+                            "<tr><td>kresz</td><td>5476</td></tr>",
+                            "<tr><td>játék (jégkorong)</td><td>5242</td></tr>",
+                            "<tr><td>színház</td><td>5158</td></tr>",
+                            "<tr><td>múvészet</td><td>5118</td></tr>",
+                            "<tr><td>kémia</td><td>5094</td></tr>",
+                            "<tr><td>fordító program</td><td>5036</td></tr>",
+                            "<tr><td>kerttervező</td><td>4951</td></tr>",
+                            "<tr><td>művészet</td><td>4939,25</td></tr>",
+                            "<tr><td>festészet</td><td>4901</td></tr>",
+                            "<tr><td>zene</td><td>4855,333333333333</td></tr>",
+                            "<tr><td>játék</td><td>4850,466666666666</td></tr>",
+                            "<tr><td>játék (labdarúgás)</td><td>4817,333333333333</td></tr>",
+                            "<tr><td>állattan</td><td>4783,666666666667</td></tr>",
+                            "<tr><td>nyelvtan</td><td>4770,666666666667</td></tr>",
+                            "<tr><td>fizika</td><td>4769</td></tr>",
+                            "<tr><td>nyelvtanító</td><td>4759,476190476191</td></tr>",
+                            "<tr><td>csillagászat</td><td>4733,571428571428</td></tr>",
+                            "<tr><td>ismeretterjesztő</td><td>4726,673913043478</td></tr>",
+                            "<tr><td>irodalom, nyelv</td><td>4704</td></tr>",
+                            "<tr><td>gasztronómia</td><td>4691</td></tr>",
+                            "<tr><td>történelem</td><td>4655,731707317073</td></tr>",
+                            "<tr><td>szótár</td><td>4624,428571428572</td></tr>",
+                            "<tr><td>sport</td><td>4607</td></tr>",
+                            "<tr><td>földrajz</td><td>4580,0625</td></tr>",
+                            "<tr><td>matematika</td><td>4520,777777777777</td></tr>",
+                            "<tr><td>felvételi</td><td>4501,333333333333</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 10
         },
         {
             "cell_type": "markdown",
