--- a/gyakorlat03_feladatok.ipynb
+++ b/gyakorlat03_feladatok.ipynb
@@ -821,7 +821,7 @@
             "cell_type": "code",
             "source": [
                 "select t.Tantárgynév,\r\n",
-                "    o.Sav\r\n",
+                "    s.Időpont\r\n",
                 "from Tantárgyak t join Orak o on t.Tantargykod = o.targy\r\n",
                 "    join Savok s on s.Sav_id = o.Sav\r\n",
                 "WHERE s.Időpont = '8:00'\r\n",
@@ -829,7 +829,7 @@
                 "EXCEPT\r\n",
                 "\r\n",
                 "select t.Tantárgynév,\r\n",
-                "    o.Sav\r\n",
+                "    s.Időpont\r\n",
                 "from Tantárgyak t join Orak o on t.Tantargykod = o.targy\r\n",
                 "    join Savok s on s.Sav_id = o.Sav\r\n",
                 "WHERE s.Időpont = '12:30'"
@@ -848,13 +848,13 @@
 }, {
     "output_type": "display_data",
     "data": {
-        "text/html": "Total execution time: 00:00:00.003"
+        "text/html": "Total execution time: 00:00:00.013"
     },
     "metadata": {}
 }, {
     "output_type": "execute_result",
     "metadata": {},
-    "execution_count": 36,
+    "execution_count": 39,
     "data": {
         "application/vnd.dataresource+json": {
             "schema": {
@@ -863,7 +863,7 @@
                         "name": "Tantárgynév"
                     },
                     {
-                        "name": "Sav"
+                        "name": "Időpont"
                     }
                 ]
             },
@@ -871,13 +871,13 @@
         },
         "text/html": [
             "<table>",
-            "<tr><th>Tantárgynév</th><th>Sav</th></tr>",
+            "<tr><th>Tantárgynév</th><th>Időpont</th></tr>",
             "</table>"
         ]
     }
 }
 ],
-            "execution_count": 36
+            "execution_count": 39
         },
         {
             "cell_type": "markdown",
