--- a/gyak_zh1.ipynb
+++ b/gyak_zh1.ipynb
@@ -56,7 +56,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 1,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -101,13 +100,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>FOGLALAS_PK</th><th>UGYFEL_FK</th><th>SZOBA_FK</th><th>METTOL</th><th>MEDDIG</th><th>FELNOTT_SZAM</th><th>GYERMEK_SZAM</th><th>Nyári_e</th></tr>",
-                            "<tr><td>561</td><td>laszlo2</td><td>42</td><td>2016-04-06</td><td>2016-04-10</td><td>2</td><td>0</td><td>Nem</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>FOGLALAS_PK</th><th>UGYFEL_FK</th><th>SZOBA_FK</th><th>METTOL</th><th>MEDDIG</th><th>FELNOTT_SZAM</th><th>GYERMEK_SZAM</th><th>Nyári_e</th></tr><tr><td>561</td><td>laszlo2</td><td>42</td><td>2016-04-06</td><td>2016-04-10</td><td>2</td><td>0</td><td>Nem</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 1
@@ -166,7 +161,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 6,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -459,57 +453,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>TIPUS</th><th>Év</th><th>Hónap</th><th>(No column name)</th></tr>",
-                            "<tr><td>Apartman</td><td>2016</td><td>4</td><td>2</td></tr>",
-                            "<tr><td>Apartman</td><td>2016</td><td>5</td><td>1</td></tr>",
-                            "<tr><td>Apartman</td><td>2016</td><td>6</td><td>1</td></tr>",
-                            "<tr><td>Apartman</td><td>2016</td><td>7</td><td>1</td></tr>",
-                            "<tr><td>Apartman</td><td>2016</td><td>8</td><td>2</td></tr>",
-                            "<tr><td>Apartman</td><td>2016</td><td>9</td><td>3</td></tr>",
-                            "<tr><td>Apartman</td><td>2016</td><td>10</td><td>9</td></tr>",
-                            "<tr><td>Apartman</td><td>2016</td><td>11</td><td>3</td></tr>",
-                            "<tr><td>Apartman</td><td>2016</td><td>12</td><td>2</td></tr>",
-                            "<tr><td>Apartman</td><td>2017</td><td>1</td><td>1</td></tr>",
-                            "<tr><td>Apartman</td><td>2017</td><td>2</td><td>5</td></tr>",
-                            "<tr><td>Hotel</td><td>2016</td><td>4</td><td>16</td></tr>",
-                            "<tr><td>Hotel</td><td>2016</td><td>5</td><td>32</td></tr>",
-                            "<tr><td>Hotel</td><td>2016</td><td>6</td><td>29</td></tr>",
-                            "<tr><td>Hotel</td><td>2016</td><td>7</td><td>30</td></tr>",
-                            "<tr><td>Hotel</td><td>2016</td><td>8</td><td>22</td></tr>",
-                            "<tr><td>Hotel</td><td>2016</td><td>9</td><td>19</td></tr>",
-                            "<tr><td>Hotel</td><td>2016</td><td>10</td><td>36</td></tr>",
-                            "<tr><td>Hotel</td><td>2016</td><td>11</td><td>27</td></tr>",
-                            "<tr><td>Hotel</td><td>2016</td><td>12</td><td>25</td></tr>",
-                            "<tr><td>Hotel</td><td>2017</td><td>1</td><td>28</td></tr>",
-                            "<tr><td>Hotel</td><td>2017</td><td>2</td><td>21</td></tr>",
-                            "<tr><td>Hotel</td><td>2017</td><td>3</td><td>1</td></tr>",
-                            "<tr><td>panzió</td><td>2016</td><td>4</td><td>2</td></tr>",
-                            "<tr><td>panzió</td><td>2016</td><td>5</td><td>9</td></tr>",
-                            "<tr><td>panzió</td><td>2016</td><td>6</td><td>10</td></tr>",
-                            "<tr><td>panzió</td><td>2016</td><td>7</td><td>7</td></tr>",
-                            "<tr><td>panzió</td><td>2016</td><td>8</td><td>6</td></tr>",
-                            "<tr><td>panzió</td><td>2016</td><td>9</td><td>6</td></tr>",
-                            "<tr><td>panzió</td><td>2016</td><td>10</td><td>11</td></tr>",
-                            "<tr><td>panzió</td><td>2016</td><td>11</td><td>3</td></tr>",
-                            "<tr><td>panzió</td><td>2016</td><td>12</td><td>6</td></tr>",
-                            "<tr><td>panzió</td><td>2017</td><td>1</td><td>5</td></tr>",
-                            "<tr><td>panzió</td><td>2017</td><td>2</td><td>5</td></tr>",
-                            "<tr><td>panzió</td><td>2017</td><td>3</td><td>1</td></tr>",
-                            "<tr><td>vendégház</td><td>2016</td><td>4</td><td>2</td></tr>",
-                            "<tr><td>vendégház</td><td>2016</td><td>5</td><td>5</td></tr>",
-                            "<tr><td>vendégház</td><td>2016</td><td>6</td><td>3</td></tr>",
-                            "<tr><td>vendégház</td><td>2016</td><td>7</td><td>5</td></tr>",
-                            "<tr><td>vendégház</td><td>2016</td><td>8</td><td>5</td></tr>",
-                            "<tr><td>vendégház</td><td>2016</td><td>9</td><td>4</td></tr>",
-                            "<tr><td>vendégház</td><td>2016</td><td>10</td><td>7</td></tr>",
-                            "<tr><td>vendégház</td><td>2016</td><td>11</td><td>4</td></tr>",
-                            "<tr><td>vendégház</td><td>2017</td><td>1</td><td>1</td></tr>",
-                            "<tr><td>vendégház</td><td>2017</td><td>2</td><td>3</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>TIPUS</th><th>Év</th><th>Hónap</th><th>(No column name)</th></tr><tr><td>Apartman</td><td>2016</td><td>4</td><td>2</td></tr><tr><td>Apartman</td><td>2016</td><td>5</td><td>1</td></tr><tr><td>Apartman</td><td>2016</td><td>6</td><td>1</td></tr><tr><td>Apartman</td><td>2016</td><td>7</td><td>1</td></tr><tr><td>Apartman</td><td>2016</td><td>8</td><td>2</td></tr><tr><td>Apartman</td><td>2016</td><td>9</td><td>3</td></tr><tr><td>Apartman</td><td>2016</td><td>10</td><td>9</td></tr><tr><td>Apartman</td><td>2016</td><td>11</td><td>3</td></tr><tr><td>Apartman</td><td>2016</td><td>12</td><td>2</td></tr><tr><td>Apartman</td><td>2017</td><td>1</td><td>1</td></tr><tr><td>Apartman</td><td>2017</td><td>2</td><td>5</td></tr><tr><td>Hotel</td><td>2016</td><td>4</td><td>16</td></tr><tr><td>Hotel</td><td>2016</td><td>5</td><td>32</td></tr><tr><td>Hotel</td><td>2016</td><td>6</td><td>29</td></tr><tr><td>Hotel</td><td>2016</td><td>7</td><td>30</td></tr><tr><td>Hotel</td><td>2016</td><td>8</td><td>22</td></tr><tr><td>Hotel</td><td>2016</td><td>9</td><td>19</td></tr><tr><td>Hotel</td><td>2016</td><td>10</td><td>36</td></tr><tr><td>Hotel</td><td>2016</td><td>11</td><td>27</td></tr><tr><td>Hotel</td><td>2016</td><td>12</td><td>25</td></tr><tr><td>Hotel</td><td>2017</td><td>1</td><td>28</td></tr><tr><td>Hotel</td><td>2017</td><td>2</td><td>21</td></tr><tr><td>Hotel</td><td>2017</td><td>3</td><td>1</td></tr><tr><td>panzió</td><td>2016</td><td>4</td><td>2</td></tr><tr><td>panzió</td><td>2016</td><td>5</td><td>9</td></tr><tr><td>panzió</td><td>2016</td><td>6</td><td>10</td></tr><tr><td>panzió</td><td>2016</td><td>7</td><td>7</td></tr><tr><td>panzió</td><td>2016</td><td>8</td><td>6</td></tr><tr><td>panzió</td><td>2016</td><td>9</td><td>6</td></tr><tr><td>panzió</td><td>2016</td><td>10</td><td>11</td></tr><tr><td>panzió</td><td>2016</td><td>11</td><td>3</td></tr><tr><td>panzió</td><td>2016</td><td>12</td><td>6</td></tr><tr><td>panzió</td><td>2017</td><td>1</td><td>5</td></tr><tr><td>panzió</td><td>2017</td><td>2</td><td>5</td></tr><tr><td>panzió</td><td>2017</td><td>3</td><td>1</td></tr><tr><td>vendégház</td><td>2016</td><td>4</td><td>2</td></tr><tr><td>vendégház</td><td>2016</td><td>5</td><td>5</td></tr><tr><td>vendégház</td><td>2016</td><td>6</td><td>3</td></tr><tr><td>vendégház</td><td>2016</td><td>7</td><td>5</td></tr><tr><td>vendégház</td><td>2016</td><td>8</td><td>5</td></tr><tr><td>vendégház</td><td>2016</td><td>9</td><td>4</td></tr><tr><td>vendégház</td><td>2016</td><td>10</td><td>7</td></tr><tr><td>vendégház</td><td>2016</td><td>11</td><td>4</td></tr><tr><td>vendégház</td><td>2017</td><td>1</td><td>1</td></tr><tr><td>vendégház</td><td>2017</td><td>2</td><td>3</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 6
