--- a/gyakorlat03_feladatok.ipynb
+++ b/gyakorlat03_feladatok.ipynb
@@ -40,7 +40,7 @@
                 "SELECT o.ora_id,\r\n",
                 "    t.terem\r\n",
                 "from Orak o JOIN Termek t On o.terem = t.Tkód\r\n",
-                "WHERE LEN(t.terem) = 3 AND t.terem BETWEEN 100 AND 199"
+                "WHERE LEN(t.terem) = 3 AND t.terem BETWEEN 100 AND 199 --ééé"
             ],
             "metadata": {
                 "azdata_cell_guid": "bd3cef1a-4e6e-4ece-9dc3-aaa9d2b5d66d",
@@ -481,7 +481,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 5,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -502,13 +501,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>Tantárgynév</th><th>Tárgyfelelős neve</th></tr>",
-                            "<tr><td>Folyami gáttan</td><td>Varga Kata</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>Tantárgynév</th><th>Tárgyfelelős neve</th></tr><tr><td>Folyami gáttan</td><td>Varga Kata</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 5
@@ -625,7 +620,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 7,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -710,29 +704,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>oktato_id</th><th>nev</th></tr>",
-                            "<tr><td>1</td><td>Kovács László</td></tr>",
-                            "<tr><td>2</td><td>Szentágotai Istvás</td></tr>",
-                            "<tr><td>3</td><td>Szerb László</td></tr>",
-                            "<tr><td>4</td><td>Ujfalussi István</td></tr>",
-                            "<tr><td>5</td><td>Balkán András</td></tr>",
-                            "<tr><td>6</td><td>Szép llonka</td></tr>",
-                            "<tr><td>7</td><td>Kiss János</td></tr>",
-                            "<tr><td>8</td><td>Pelikán József</td></tr>",
-                            "<tr><td>9</td><td>Farkasos Piroska</td></tr>",
-                            "<tr><td>10</td><td>Jogrerős Pál</td></tr>",
-                            "<tr><td>12</td><td>Varga Kata</td></tr>",
-                            "<tr><td>14</td><td>Szénási ászló</td></tr>",
-                            "<tr><td>18</td><td>Nógrádi Kata</td></tr>",
-                            "<tr><td>20</td><td>Kovács András</td></tr>",
-                            "<tr><td>104</td><td>Ludas Mátyás</td></tr>",
-                            "<tr><td>108</td><td>Róbert Gida</td></tr>",
-                            "<tr><td>200</td><td>Aranyi Mária</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>oktato_id</th><th>nev</th></tr><tr><td>1</td><td>Kovács László</td></tr><tr><td>2</td><td>Szentágotai Istvás</td></tr><tr><td>3</td><td>Szerb László</td></tr><tr><td>4</td><td>Ujfalussi István</td></tr><tr><td>5</td><td>Balkán András</td></tr><tr><td>6</td><td>Szép llonka</td></tr><tr><td>7</td><td>Kiss János</td></tr><tr><td>8</td><td>Pelikán József</td></tr><tr><td>9</td><td>Farkasos Piroska</td></tr><tr><td>10</td><td>Jogrerős Pál</td></tr><tr><td>12</td><td>Varga Kata</td></tr><tr><td>14</td><td>Szénási ászló</td></tr><tr><td>18</td><td>Nógrádi Kata</td></tr><tr><td>20</td><td>Kovács András</td></tr><tr><td>104</td><td>Ludas Mátyás</td></tr><tr><td>108</td><td>Róbert Gida</td></tr><tr><td>200</td><td>Aranyi Mária</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 7
@@ -787,7 +761,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 21,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -824,17 +797,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>Tantárgynév</th><th>Időpont</th></tr>",
-                            "<tr><td>Az öntés elmélete</td><td>8.00</td></tr>",
-                            "<tr><td>Az ürgeöntés alapjai</td><td>8.00</td></tr>",
-                            "<tr><td>Az ürgeöntés hydrológiai alapjai II.</td><td>8.00</td></tr>",
-                            "<tr><td>Fejezetek az ürgék jogaiból</td><td>8.00</td></tr>",
-                            "<tr><td>Ürgevitel</td><td>8.00</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>Tantárgynév</th><th>Időpont</th></tr><tr><td>Az öntés elmélete</td><td>8.00</td></tr><tr><td>Az ürgeöntés alapjai</td><td>8.00</td></tr><tr><td>Az ürgeöntés hydrológiai alapjai II.</td><td>8.00</td></tr><tr><td>Fejezetek az ürgék jogaiból</td><td>8.00</td></tr><tr><td>Ürgevitel</td><td>8.00</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 21
@@ -887,7 +852,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 32,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -913,16 +877,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>Terem</th></tr>",
-                            "<tr><td>116</td></tr>",
-                            "<tr><td>119</td></tr>",
-                            "<tr><td>S.Asor.S3</td></tr>",
-                            "<tr><td>VP 203.</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>Terem</th></tr><tr><td>116</td></tr><tr><td>119</td></tr><tr><td>S.Asor.S3</td></tr><tr><td>VP 203.</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 32
@@ -1079,7 +1036,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 43,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -1224,37 +1180,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>oktató</th><th>beosztás</th><th>status</th></tr>",
-                            "<tr><td>Aranyi Mária</td><td>1</td><td>1</td></tr>",
-                            "<tr><td>Kiss István</td><td>1</td><td>2</td></tr>",
-                            "<tr><td>Kovács András</td><td>1</td><td>1</td></tr>",
-                            "<tr><td>Ludas Mátyás</td><td>1</td><td>1</td></tr>",
-                            "<tr><td>Mészáros Kriszta</td><td>1</td><td>2</td></tr>",
-                            "<tr><td>Nógrádi Kata</td><td>1</td><td>1</td></tr>",
-                            "<tr><td>Rácz András</td><td>1</td><td>1</td></tr>",
-                            "<tr><td>Szabó Andrera</td><td>1</td><td>1</td></tr>",
-                            "<tr><td>Farkasos Piroska</td><td>2</td><td>3</td></tr>",
-                            "<tr><td>Kiss János</td><td>2</td><td>1</td></tr>",
-                            "<tr><td>Pelikán József</td><td>2</td><td>3</td></tr>",
-                            "<tr><td>Róbert Gida</td><td>2</td><td>1</td></tr>",
-                            "<tr><td>Vitéz János</td><td>2</td><td>1</td></tr>",
-                            "<tr><td>Dr. Szentágotai Istvás</td><td>3</td><td>2</td></tr>",
-                            "<tr><td>Dr. Szép llonka</td><td>3</td><td>1</td></tr>",
-                            "<tr><td>Szénási ászló</td><td>3</td><td>1</td></tr>",
-                            "<tr><td>Dr. Balkán András</td><td>4</td><td>2</td></tr>",
-                            "<tr><td>Dr. Józsa Gábor</td><td>4</td><td>1</td></tr>",
-                            "<tr><td>Dr. Varga Kata</td><td>4</td><td>1</td></tr>",
-                            "<tr><td>Szerb László</td><td>4</td><td>1</td></tr>",
-                            "<tr><td>Dr. Kovacs Istvan</td><td>5</td><td>1</td></tr>",
-                            "<tr><td>Dr. Juhász András</td><td>6</td><td>1</td></tr>",
-                            "<tr><td>Dr. Kovács László</td><td>6</td><td>2</td></tr>",
-                            "<tr><td>Prof, tanszékvezető Ujfalussi István</td><td>6</td><td>2</td></tr>",
-                            "<tr><td>Prof. Jogrerős Pál</td><td>6</td><td>1</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>oktató</th><th>beosztás</th><th>status</th></tr><tr><td>Aranyi Mária</td><td>1</td><td>1</td></tr><tr><td>Kiss István</td><td>1</td><td>2</td></tr><tr><td>Kovács András</td><td>1</td><td>1</td></tr><tr><td>Ludas Mátyás</td><td>1</td><td>1</td></tr><tr><td>Mészáros Kriszta</td><td>1</td><td>2</td></tr><tr><td>Nógrádi Kata</td><td>1</td><td>1</td></tr><tr><td>Rácz András</td><td>1</td><td>1</td></tr><tr><td>Szabó Andrera</td><td>1</td><td>1</td></tr><tr><td>Farkasos Piroska</td><td>2</td><td>3</td></tr><tr><td>Kiss János</td><td>2</td><td>1</td></tr><tr><td>Pelikán József</td><td>2</td><td>3</td></tr><tr><td>Róbert Gida</td><td>2</td><td>1</td></tr><tr><td>Vitéz János</td><td>2</td><td>1</td></tr><tr><td>Dr. Szentágotai Istvás</td><td>3</td><td>2</td></tr><tr><td>Dr. Szép llonka</td><td>3</td><td>1</td></tr><tr><td>Szénási ászló</td><td>3</td><td>1</td></tr><tr><td>Dr. Balkán András</td><td>4</td><td>2</td></tr><tr><td>Dr. Józsa Gábor</td><td>4</td><td>1</td></tr><tr><td>Dr. Varga Kata</td><td>4</td><td>1</td></tr><tr><td>Szerb László</td><td>4</td><td>1</td></tr><tr><td>Dr. Kovacs Istvan</td><td>5</td><td>1</td></tr><tr><td>Dr. Juhász András</td><td>6</td><td>1</td></tr><tr><td>Dr. Kovács László</td><td>6</td><td>2</td></tr><tr><td>Prof, tanszékvezető Ujfalussi István</td><td>6</td><td>2</td></tr><tr><td>Prof. Jogrerős Pál</td><td>6</td><td>1</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 43
@@ -1309,7 +1237,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 47,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -1350,18 +1277,9 @@
                                 }
                             ]
                         },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>Kredit</th><th>Db</th></tr>",
-                            "<tr><td>2</td><td>3</td></tr>",
-                            "<tr><td>3</td><td>3</td></tr>",
-                            "<tr><td>4</td><td>2</td></tr>",
-                            "<tr><td>1</td><td>2</td></tr>",
-                            "<tr><td>5</td><td>1</td></tr>",
-                            "<tr><td>6</td><td>1</td></tr>",
-                            "</table>"
-                        ]
-                    }
+                        "text/html": "<table><tr><th>Kredit</th><th>Db</th></tr><tr><td>2</td><td>3</td></tr><tr><td>3</td><td>3</td></tr><tr><td>4</td><td>2</td></tr><tr><td>1</td><td>2</td></tr><tr><td>5</td><td>1</td></tr><tr><td>6</td><td>1</td></tr></table>"
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 47
