--- a/zh1_a6jg5p.ipynb
+++ b/zh1_a6jg5p.ipynb
@@ -163,172 +163,264 @@
             ],
             "metadata": {
                 "azdata_cell_guid": "39b67407-8722-4758-8ddd-5f029201b2e8",
+                "language": "sql",
+                "tags": [
+                    "hide_input"
+                ]
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(20 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.006"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 12,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "SZALLAS_ID"
+                                    },
+                                    {
+                                        "name": "SZALLAS_NEV"
+                                    },
+                                    {
+                                        "name": "Klímás szobák száma"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "SZALLAS_ID": "1",
+                                    "SZALLAS_NEV": "Sába-Ház",
+                                    "Klímás szobák száma": "10"
+                                },
+                                {
+                                    "SZALLAS_ID": "2",
+                                    "SZALLAS_NEV": "Családi Ház",
+                                    "Klímás szobák száma": "4"
+                                },
+                                {
+                                    "SZALLAS_ID": "3",
+                                    "SZALLAS_NEV": "Fortuna Apartman",
+                                    "Klímás szobák száma": "5"
+                                },
+                                {
+                                    "SZALLAS_ID": "4",
+                                    "SZALLAS_NEV": "Fortuna panzió",
+                                    "Klímás szobák száma": "12"
+                                },
+                                {
+                                    "SZALLAS_ID": "5",
+                                    "SZALLAS_NEV": "Fortuna Panzió",
+                                    "Klímás szobák száma": "8"
+                                },
+                                {
+                                    "SZALLAS_ID": "6",
+                                    "SZALLAS_NEV": "Kentaur Hotel",
+                                    "Klímás szobák száma": "22"
+                                },
+                                {
+                                    "SZALLAS_ID": "7",
+                                    "SZALLAS_NEV": "Szieszta Apartmanház",
+                                    "Klímás szobák száma": "4"
+                                },
+                                {
+                                    "SZALLAS_ID": "8",
+                                    "SZALLAS_NEV": "Hotel Három Hattyú",
+                                    "Klímás szobák száma": "28"
+                                },
+                                {
+                                    "SZALLAS_ID": "9",
+                                    "SZALLAS_NEV": "Jáde panzió",
+                                    "Klímás szobák száma": "2"
+                                },
+                                {
+                                    "SZALLAS_ID": "10",
+                                    "SZALLAS_NEV": "Lagúna Hotel",
+                                    "Klímás szobák száma": "15"
+                                },
+                                {
+                                    "SZALLAS_ID": "11",
+                                    "SZALLAS_NEV": "Partiszél Vendégház",
+                                    "Klímás szobák száma": "4"
+                                },
+                                {
+                                    "SZALLAS_ID": "12",
+                                    "SZALLAS_NEV": "Gold Hotel",
+                                    "Klímás szobák száma": "42"
+                                },
+                                {
+                                    "SZALLAS_ID": "13",
+                                    "SZALLAS_NEV": "Riviéra Panzió",
+                                    "Klímás szobák száma": "8"
+                                },
+                                {
+                                    "SZALLAS_ID": "14",
+                                    "SZALLAS_NEV": "Nyárfás Vendégház",
+                                    "Klímás szobák száma": "4"
+                                },
+                                {
+                                    "SZALLAS_ID": "15",
+                                    "SZALLAS_NEV": "Tímárház Panzió",
+                                    "Klímás szobák száma": "9"
+                                },
+                                {
+                                    "SZALLAS_ID": "16",
+                                    "SZALLAS_NEV": "Bagoly Hotel",
+                                    "Klímás szobák száma": "14"
+                                },
+                                {
+                                    "SZALLAS_ID": "17",
+                                    "SZALLAS_NEV": "Szarvas Hotel",
+                                    "Klímás szobák száma": "11"
+                                },
+                                {
+                                    "SZALLAS_ID": "18",
+                                    "SZALLAS_NEV": "Fortuna Apartman",
+                                    "Klímás szobák száma": "2"
+                                },
+                                {
+                                    "SZALLAS_ID": "19",
+                                    "SZALLAS_NEV": "Nyárfás Vendégház",
+                                    "Klímás szobák száma": "2"
+                                },
+                                {
+                                    "SZALLAS_ID": "20",
+                                    "SZALLAS_NEV": "Kollégium",
+                                    "Klímás szobák száma": "9"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>SZALLAS_ID</th><th>SZALLAS_NEV</th><th>Klímás szobák száma</th></tr>",
+                            "<tr><td>1</td><td>Sába-Ház</td><td>10</td></tr>",
+                            "<tr><td>2</td><td>Családi Ház</td><td>4</td></tr>",
+                            "<tr><td>3</td><td>Fortuna Apartman</td><td>5</td></tr>",
+                            "<tr><td>4</td><td>Fortuna panzió</td><td>12</td></tr>",
+                            "<tr><td>5</td><td>Fortuna Panzió</td><td>8</td></tr>",
+                            "<tr><td>6</td><td>Kentaur Hotel</td><td>22</td></tr>",
+                            "<tr><td>7</td><td>Szieszta Apartmanház</td><td>4</td></tr>",
+                            "<tr><td>8</td><td>Hotel Három Hattyú</td><td>28</td></tr>",
+                            "<tr><td>9</td><td>Jáde panzió</td><td>2</td></tr>",
+                            "<tr><td>10</td><td>Lagúna Hotel</td><td>15</td></tr>",
+                            "<tr><td>11</td><td>Partiszél Vendégház</td><td>4</td></tr>",
+                            "<tr><td>12</td><td>Gold Hotel</td><td>42</td></tr>",
+                            "<tr><td>13</td><td>Riviéra Panzió</td><td>8</td></tr>",
+                            "<tr><td>14</td><td>Nyárfás Vendégház</td><td>4</td></tr>",
+                            "<tr><td>15</td><td>Tímárház Panzió</td><td>9</td></tr>",
+                            "<tr><td>16</td><td>Bagoly Hotel</td><td>14</td></tr>",
+                            "<tr><td>17</td><td>Szarvas Hotel</td><td>11</td></tr>",
+                            "<tr><td>18</td><td>Fortuna Apartman</td><td>2</td></tr>",
+                            "<tr><td>19</td><td>Nyárfás Vendégház</td><td>2</td></tr>",
+                            "<tr><td>20</td><td>Kollégium</td><td>9</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 12
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "Készítsen lekérdezést, amely az ügyfeleket születési idejük alapján kategóriákba sorolja (1985-ben vagy utána születettek: fiatal, 1970 előtt születettek: idős, a többiek: középkorú), majd megjeleníti, hogy melyik kategóriában hány foglalás történt!\n",
+                "\n",
+                "a. Csak a kategória neve és a foglalásszám jelenjen meg\n",
+                "\n",
+                "b. A számolás során csak azokat a foglalásokat vegyük figyelembe, amelyek legalább 2 főre történtek!"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "172f945d-fa7e-46bf-8626-7e97b81c7ac6"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "select IIF(year(v.SZUL_DAT)>=1985,'fiatal',IIF(YEAR(v.SZUL_DAT)<1970,'idős','középkorú')) as 'Kategória',\r\n",
+                "    Count(f.FOGLALAS_PK) as 'Foglalás száma'\r\n",
+                "from Vendeg v JOIN Foglalas f ON v.USERNEV = f.UGYFEL_FK\r\n",
+                "WHERE f.FELNOTT_SZAM + f.GYERMEK_SZAM >1\r\n",
+                "GROUP BY IIF(year(v.SZUL_DAT)>=1985,'fiatal',IIF(YEAR(v.SZUL_DAT)<1970,'idős','középkorú'))\r\n",
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "d0826ccd-2d27-403b-b9b7-7dfea52d8c83",
                 "language": "sql"
             },
             "outputs": [
-{
-    "output_type": "display_data",
-    "data": {
-        "text/html": "(20 rows affected)"
-    },
-    "metadata": {}
-}, {
-    "output_type": "display_data",
-    "data": {
-        "text/html": "Total execution time: 00:00:00.006"
-    },
-    "metadata": {}
-}, {
-    "output_type": "execute_result",
-    "metadata": {},
-    "execution_count": 12,
-    "data": {
-        "application/vnd.dataresource+json": {
-            "schema": {
-                "fields": [
-                    {
-                        "name": "SZALLAS_ID"
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(3 rows affected)"
                     },
-                    {
-                        "name": "SZALLAS_NEV"
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.016"
                     },
-                    {
-                        "name": "Klímás szobák száma"
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 13,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "Kategória"
+                                    },
+                                    {
+                                        "name": "Foglalás száma"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "Kategória": "fiatal",
+                                    "Foglalás száma": "365"
+                                },
+                                {
+                                    "Kategória": "idős",
+                                    "Foglalás száma": "96"
+                                },
+                                {
+                                    "Kategória": "középkorú",
+                                    "Foglalás száma": "419"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>Kategória</th><th>Foglalás száma</th></tr>",
+                            "<tr><td>fiatal</td><td>365</td></tr>",
+                            "<tr><td>idős</td><td>96</td></tr>",
+                            "<tr><td>középkorú</td><td>419</td></tr>",
+                            "</table>"
+                        ]
                     }
-                ]
-            },
-            "data": [
-                {
-                    "SZALLAS_ID": "1",
-                    "SZALLAS_NEV": "Sába-Ház",
-                    "Klímás szobák száma": "10"
-                },
-                {
-                    "SZALLAS_ID": "2",
-                    "SZALLAS_NEV": "Családi Ház",
-                    "Klímás szobák száma": "4"
-                },
-                {
-                    "SZALLAS_ID": "3",
-                    "SZALLAS_NEV": "Fortuna Apartman",
-                    "Klímás szobák száma": "5"
-                },
-                {
-                    "SZALLAS_ID": "4",
-                    "SZALLAS_NEV": "Fortuna panzió",
-                    "Klímás szobák száma": "12"
-                },
-                {
-                    "SZALLAS_ID": "5",
-                    "SZALLAS_NEV": "Fortuna Panzió",
-                    "Klímás szobák száma": "8"
-                },
-                {
-                    "SZALLAS_ID": "6",
-                    "SZALLAS_NEV": "Kentaur Hotel",
-                    "Klímás szobák száma": "22"
-                },
-                {
-                    "SZALLAS_ID": "7",
-                    "SZALLAS_NEV": "Szieszta Apartmanház",
-                    "Klímás szobák száma": "4"
-                },
-                {
-                    "SZALLAS_ID": "8",
-                    "SZALLAS_NEV": "Hotel Három Hattyú",
-                    "Klímás szobák száma": "28"
-                },
-                {
-                    "SZALLAS_ID": "9",
-                    "SZALLAS_NEV": "Jáde panzió",
-                    "Klímás szobák száma": "2"
-                },
-                {
-                    "SZALLAS_ID": "10",
-                    "SZALLAS_NEV": "Lagúna Hotel",
-                    "Klímás szobák száma": "15"
-                },
-                {
-                    "SZALLAS_ID": "11",
-                    "SZALLAS_NEV": "Partiszél Vendégház",
-                    "Klímás szobák száma": "4"
-                },
-                {
-                    "SZALLAS_ID": "12",
-                    "SZALLAS_NEV": "Gold Hotel",
-                    "Klímás szobák száma": "42"
-                },
-                {
-                    "SZALLAS_ID": "13",
-                    "SZALLAS_NEV": "Riviéra Panzió",
-                    "Klímás szobák száma": "8"
-                },
-                {
-                    "SZALLAS_ID": "14",
-                    "SZALLAS_NEV": "Nyárfás Vendégház",
-                    "Klímás szobák száma": "4"
-                },
-                {
-                    "SZALLAS_ID": "15",
-                    "SZALLAS_NEV": "Tímárház Panzió",
-                    "Klímás szobák száma": "9"
-                },
-                {
-                    "SZALLAS_ID": "16",
-                    "SZALLAS_NEV": "Bagoly Hotel",
-                    "Klímás szobák száma": "14"
-                },
-                {
-                    "SZALLAS_ID": "17",
-                    "SZALLAS_NEV": "Szarvas Hotel",
-                    "Klímás szobák száma": "11"
-                },
-                {
-                    "SZALLAS_ID": "18",
-                    "SZALLAS_NEV": "Fortuna Apartman",
-                    "Klímás szobák száma": "2"
-                },
-                {
-                    "SZALLAS_ID": "19",
-                    "SZALLAS_NEV": "Nyárfás Vendégház",
-                    "Klímás szobák száma": "2"
-                },
-                {
-                    "SZALLAS_ID": "20",
-                    "SZALLAS_NEV": "Kollégium",
-                    "Klímás szobák száma": "9"
                 }
-            ]
-        },
-        "text/html": [
-            "<table>",
-            "<tr><th>SZALLAS_ID</th><th>SZALLAS_NEV</th><th>Klímás szobák száma</th></tr>",
-            "<tr><td>1</td><td>Sába-Ház</td><td>10</td></tr>",
-            "<tr><td>2</td><td>Családi Ház</td><td>4</td></tr>",
-            "<tr><td>3</td><td>Fortuna Apartman</td><td>5</td></tr>",
-            "<tr><td>4</td><td>Fortuna panzió</td><td>12</td></tr>",
-            "<tr><td>5</td><td>Fortuna Panzió</td><td>8</td></tr>",
-            "<tr><td>6</td><td>Kentaur Hotel</td><td>22</td></tr>",
-            "<tr><td>7</td><td>Szieszta Apartmanház</td><td>4</td></tr>",
-            "<tr><td>8</td><td>Hotel Három Hattyú</td><td>28</td></tr>",
-            "<tr><td>9</td><td>Jáde panzió</td><td>2</td></tr>",
-            "<tr><td>10</td><td>Lagúna Hotel</td><td>15</td></tr>",
-            "<tr><td>11</td><td>Partiszél Vendégház</td><td>4</td></tr>",
-            "<tr><td>12</td><td>Gold Hotel</td><td>42</td></tr>",
-            "<tr><td>13</td><td>Riviéra Panzió</td><td>8</td></tr>",
-            "<tr><td>14</td><td>Nyárfás Vendégház</td><td>4</td></tr>",
-            "<tr><td>15</td><td>Tímárház Panzió</td><td>9</td></tr>",
-            "<tr><td>16</td><td>Bagoly Hotel</td><td>14</td></tr>",
-            "<tr><td>17</td><td>Szarvas Hotel</td><td>11</td></tr>",
-            "<tr><td>18</td><td>Fortuna Apartman</td><td>2</td></tr>",
-            "<tr><td>19</td><td>Nyárfás Vendégház</td><td>2</td></tr>",
-            "<tr><td>20</td><td>Kollégium</td><td>9</td></tr>",
-            "</table>"
-        ]
-    }
-}
-],
-            "execution_count": 12
+            ],
+            "execution_count": 13
         }
     ]
 }
