--- a/zh1_a6jg5p.ipynb
+++ b/zh1_a6jg5p.ipynb
@@ -42,93 +42,91 @@
                 "language": "sql"
             },
             "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "(7 rows affected)"
+{
+    "output_type": "display_data",
+    "data": {
+        "text/html": "(7 rows affected)"
+    },
+    "metadata": {}
+}, {
+    "output_type": "display_data",
+    "data": {
+        "text/html": "Total execution time: 00:00:00.008"
+    },
+    "metadata": {}
+}, {
+    "output_type": "execute_result",
+    "metadata": {},
+    "execution_count": 21,
+    "data": {
+        "application/vnd.dataresource+json": {
+            "schema": {
+                "fields": [
+                    {
+                        "name": "Foglalás azonosító"
                     },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.003"
+                    {
+                        "name": "Kezdő dátum"
                     },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "execute_result",
-                    "metadata": {},
-                    "execution_count": 5,
-                    "data": {
-                        "application/vnd.dataresource+json": {
-                            "schema": {
-                                "fields": [
-                                    {
-                                        "name": "Foglalás azonosító"
-                                    },
-                                    {
-                                        "name": "Kezdő dátum"
-                                    },
-                                    {
-                                        "name": "Módosított kezdődátum"
-                                    }
-                                ]
-                            },
-                            "data": [
-                                {
-                                    "Foglalás azonosító": "706",
-                                    "Kezdő dátum": "2016-07-22",
-                                    "Módosított kezdődátum": "2016-08-22"
-                                },
-                                {
-                                    "Foglalás azonosító": "765",
-                                    "Kezdő dátum": "2016-08-09",
-                                    "Módosított kezdődátum": "2016-09-09"
-                                },
-                                {
-                                    "Foglalás azonosító": "1083",
-                                    "Kezdő dátum": "2016-09-27",
-                                    "Módosított kezdődátum": "2016-10-27"
-                                },
-                                {
-                                    "Foglalás azonosító": "1250",
-                                    "Kezdő dátum": "2016-11-05",
-                                    "Módosított kezdődátum": "2016-12-05"
-                                },
-                                {
-                                    "Foglalás azonosító": "1313",
-                                    "Kezdő dátum": "2016-11-23",
-                                    "Módosított kezdődátum": "2016-12-23"
-                                },
-                                {
-                                    "Foglalás azonosító": "1354",
-                                    "Kezdő dátum": "2016-12-07",
-                                    "Módosított kezdődátum": "2017-01-07"
-                                },
-                                {
-                                    "Foglalás azonosító": "1484",
-                                    "Kezdő dátum": "2017-01-30",
-                                    "Módosított kezdődátum": "2017-02-28"
-                                }
-                            ]
-                        },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>Foglalás azonosító</th><th>Kezdő dátum</th><th>Módosított kezdődátum</th></tr>",
-                            "<tr><td>706</td><td>2016-07-22</td><td>2016-08-22</td></tr>",
-                            "<tr><td>765</td><td>2016-08-09</td><td>2016-09-09</td></tr>",
-                            "<tr><td>1083</td><td>2016-09-27</td><td>2016-10-27</td></tr>",
-                            "<tr><td>1250</td><td>2016-11-05</td><td>2016-12-05</td></tr>",
-                            "<tr><td>1313</td><td>2016-11-23</td><td>2016-12-23</td></tr>",
-                            "<tr><td>1354</td><td>2016-12-07</td><td>2017-01-07</td></tr>",
-                            "<tr><td>1484</td><td>2017-01-30</td><td>2017-02-28</td></tr>",
-                            "</table>"
-                        ]
+                    {
+                        "name": "Módosított kezdődátum"
                     }
+                ]
+            },
+            "data": [
+                {
+                    "Foglalás azonosító": "706",
+                    "Kezdő dátum": "2016-07-22",
+                    "Módosított kezdődátum": "2016-08-22"
+                },
+                {
+                    "Foglalás azonosító": "765",
+                    "Kezdő dátum": "2016-08-09",
+                    "Módosított kezdődátum": "2016-09-09"
+                },
+                {
+                    "Foglalás azonosító": "1083",
+                    "Kezdő dátum": "2016-09-27",
+                    "Módosított kezdődátum": "2016-10-27"
+                },
+                {
+                    "Foglalás azonosító": "1250",
+                    "Kezdő dátum": "2016-11-05",
+                    "Módosított kezdődátum": "2016-12-05"
+                },
+                {
+                    "Foglalás azonosító": "1313",
+                    "Kezdő dátum": "2016-11-23",
+                    "Módosított kezdődátum": "2016-12-23"
+                },
+                {
+                    "Foglalás azonosító": "1354",
+                    "Kezdő dátum": "2016-12-07",
+                    "Módosított kezdődátum": "2017-01-07"
+                },
+                {
+                    "Foglalás azonosító": "1484",
+                    "Kezdő dátum": "2017-01-30",
+                    "Módosított kezdődátum": "2017-02-28"
                 }
-            ],
-            "execution_count": 5
+            ]
+        },
+        "text/html": [
+            "<table>",
+            "<tr><th>Foglalás azonosító</th><th>Kezdő dátum</th><th>Módosított kezdődátum</th></tr>",
+            "<tr><td>706</td><td>2016-07-22</td><td>2016-08-22</td></tr>",
+            "<tr><td>765</td><td>2016-08-09</td><td>2016-09-09</td></tr>",
+            "<tr><td>1083</td><td>2016-09-27</td><td>2016-10-27</td></tr>",
+            "<tr><td>1250</td><td>2016-11-05</td><td>2016-12-05</td></tr>",
+            "<tr><td>1313</td><td>2016-11-23</td><td>2016-12-23</td></tr>",
+            "<tr><td>1354</td><td>2016-12-07</td><td>2017-01-07</td></tr>",
+            "<tr><td>1484</td><td>2017-01-30</td><td>2017-02-28</td></tr>",
+            "</table>"
+        ]
+    }
+}
+],
+            "execution_count": 21
         },
         {
             "cell_type": "markdown",
@@ -164,9 +162,7 @@
             "metadata": {
                 "azdata_cell_guid": "39b67407-8722-4758-8ddd-5f029201b2e8",
                 "language": "sql",
-                "tags": [
-                    "hide_input"
-                ]
+                "tags": []
             },
             "outputs": [
                 {
@@ -179,14 +175,14 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.006"
+                        "text/html": "Total execution time: 00:00:00.004"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
                     "metadata": {},
-                    "execution_count": 12,
+                    "execution_count": 20,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -333,7 +329,7 @@
                     }
                 }
             ],
-            "execution_count": 12
+            "execution_count": 20
         },
         {
             "cell_type": "markdown",
@@ -361,7 +357,8 @@
             ],
             "metadata": {
                 "azdata_cell_guid": "d0826ccd-2d27-403b-b9b7-7dfea52d8c83",
-                "language": "sql"
+                "language": "sql",
+                "tags": []
             },
             "outputs": [
                 {
